Drops pin on map with long press

--- a/Virtual Tourist/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Base.lproj/Main.storyboard
@@ -18,9 +18,16 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="tri-PN-VcS"/>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="tri-PN-VcS">
+                                <gestureRecognizers/>
+                                <connections>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="n6E-Yu-QKB"/>
+                                    <outletCollection property="gestureRecognizers" destination="jEG-B1-q8y" appends="YES" id="S0c-IH-DHP"/>
+                                </connections>
+                            </mapView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="tri-PN-VcS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="6Wx-du-0uW"/>
                             <constraint firstItem="tri-PN-VcS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="MpA-bj-P6g"/>
@@ -40,6 +47,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="jEG-B1-q8y">
+                    <connections>
+                        <action selector="handleLongPress:" destination="BYZ-38-t0r" id="QTh-Sn-cEM"/>
+                    </connections>
+                </pongPressGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
