--- a/Virtual Tourist/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Base.lproj/Main.storyboard
@@ -71,6 +71,9 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="Xeu-4V-s7S"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="5d2-3a-0xe" id="KEO-dp-KTD"/>
+                                </connections>
                             </mapView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dQi-g6-548">
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
