--- a/Virtual Tourist/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Base.lproj/Main.storyboard
@@ -84,11 +84,11 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="kcQ-GI-Zxj">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="ImageCell" id="kcQ-GI-Zxj" customClass="PhotoCollectionViewCell" customModule="Virtual_Tourist" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="136" height="136"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="136" height="136"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="137" height="136"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="del-Xl-nPF"/>
@@ -100,8 +100,15 @@
                                             <constraint firstItem="del-Xl-nPF" firstAttribute="height" secondItem="kcQ-GI-Zxj" secondAttribute="height" id="h1D-d0-AOg"/>
                                             <constraint firstItem="del-Xl-nPF" firstAttribute="width" secondItem="kcQ-GI-Zxj" secondAttribute="width" id="n4Z-lO-XUD"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="imageView" destination="del-Xl-nPF" id="0rY-Vj-Yg7"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="5d2-3a-0xe" id="c3B-2c-nom"/>
+                                    <outlet property="delegate" destination="5d2-3a-0xe" id="8jT-mq-m62"/>
+                                </connections>
                             </collectionView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v3o-Vb-mVK">
                                 <items>
@@ -132,6 +139,7 @@
                     </view>
                     <connections>
                         <outlet property="mapView" destination="JUw-VT-a0C" id="fng-Bh-52w"/>
+                        <outlet property="photoCollectionView" destination="dQi-g6-548" id="gb6-Eg-jAS"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jyO-x6-Bke" userLabel="First Responder" sceneMemberID="firstResponder"/>
