--- a/Virtual Tourist/Base.lproj/Main.storyboard
+++ b/Virtual Tourist/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -67,51 +68,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JUw-VT-a0C">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="Xeu-4V-s7S"/>
-                                </constraints>
-                            </mapView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dQi-g6-548">
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dc8-38-a1U">
-                                    <size key="itemSize" width="136" height="136"/>
-                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                                </collectionViewFlowLayout>
-                                <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionCell" id="kcQ-GI-Zxj" customClass="PhotoCollectionViewCell" customModule="Virtual_Tourist" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="136" height="136"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="136" height="136"/>
-                                            <autoresizingMask key="autoresizingMask"/>
-                                            <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="del-Xl-nPF"/>
-                                                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="seN-gg-mDN"/>
-                                            </subviews>
-                                        </view>
-                                        <constraints>
-                                            <constraint firstItem="del-Xl-nPF" firstAttribute="centerX" secondItem="kcQ-GI-Zxj" secondAttribute="centerX" id="93O-Kx-Yu9"/>
-                                            <constraint firstItem="seN-gg-mDN" firstAttribute="centerY" secondItem="kcQ-GI-Zxj" secondAttribute="centerY" id="YTb-lk-nC5"/>
-                                            <constraint firstItem="del-Xl-nPF" firstAttribute="centerY" secondItem="kcQ-GI-Zxj" secondAttribute="centerY" id="gIe-41-Ibe"/>
-                                            <constraint firstItem="del-Xl-nPF" firstAttribute="height" secondItem="kcQ-GI-Zxj" secondAttribute="height" id="h1D-d0-AOg"/>
-                                            <constraint firstItem="del-Xl-nPF" firstAttribute="width" secondItem="kcQ-GI-Zxj" secondAttribute="width" id="n4Z-lO-XUD"/>
-                                            <constraint firstItem="seN-gg-mDN" firstAttribute="centerX" secondItem="kcQ-GI-Zxj" secondAttribute="centerX" id="tQX-nC-d0N"/>
-                                        </constraints>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3kk-4V-mZD">
+                                <subviews>
+                                    <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="JUw-VT-a0C"/>
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="dQi-g6-548">
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dc8-38-a1U">
+                                            <size key="itemSize" width="136" height="136"/>
+                                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                            <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                        </collectionViewFlowLayout>
+                                        <cells>
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoCollectionCell" id="kcQ-GI-Zxj" customClass="PhotoCollectionViewCell" customModule="Virtual_Tourist" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="0.0" width="136" height="136"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                                    <rect key="frame" x="0.0" y="0.0" width="136" height="136"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="del-Xl-nPF"/>
+                                                        <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="seN-gg-mDN"/>
+                                                    </subviews>
+                                                </view>
+                                                <constraints>
+                                                    <constraint firstItem="del-Xl-nPF" firstAttribute="centerX" secondItem="kcQ-GI-Zxj" secondAttribute="centerX" id="93O-Kx-Yu9"/>
+                                                    <constraint firstItem="seN-gg-mDN" firstAttribute="centerY" secondItem="kcQ-GI-Zxj" secondAttribute="centerY" id="YTb-lk-nC5"/>
+                                                    <constraint firstItem="del-Xl-nPF" firstAttribute="centerY" secondItem="kcQ-GI-Zxj" secondAttribute="centerY" id="gIe-41-Ibe"/>
+                                                    <constraint firstItem="del-Xl-nPF" firstAttribute="height" secondItem="kcQ-GI-Zxj" secondAttribute="height" id="h1D-d0-AOg"/>
+                                                    <constraint firstItem="del-Xl-nPF" firstAttribute="width" secondItem="kcQ-GI-Zxj" secondAttribute="width" id="n4Z-lO-XUD"/>
+                                                    <constraint firstItem="seN-gg-mDN" firstAttribute="centerX" secondItem="kcQ-GI-Zxj" secondAttribute="centerX" id="tQX-nC-d0N"/>
+                                                </constraints>
+                                                <connections>
+                                                    <outlet property="activityIndicator" destination="seN-gg-mDN" id="xDq-In-X0n"/>
+                                                    <outlet property="imageView" destination="del-Xl-nPF" id="0rY-Vj-Yg7"/>
+                                                </connections>
+                                            </collectionViewCell>
+                                        </cells>
                                         <connections>
-                                            <outlet property="activityIndicator" destination="seN-gg-mDN" id="xDq-In-X0n"/>
-                                            <outlet property="imageView" destination="del-Xl-nPF" id="0rY-Vj-Yg7"/>
+                                            <outlet property="dataSource" destination="5d2-3a-0xe" id="K6C-nE-mNW"/>
+                                            <outlet property="delegate" destination="5d2-3a-0xe" id="8Tc-kt-buS"/>
                                         </connections>
-                                    </collectionViewCell>
-                                </cells>
-                                <connections>
-                                    <outlet property="dataSource" destination="5d2-3a-0xe" id="K6C-nE-mNW"/>
-                                    <outlet property="delegate" destination="5d2-3a-0xe" id="8Tc-kt-buS"/>
-                                </connections>
-                            </collectionView>
+                                    </collectionView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="JUw-VT-a0C" firstAttribute="width" secondItem="3kk-4V-mZD" secondAttribute="width" id="4yS-ST-GOW"/>
+                                    <constraint firstItem="JUw-VT-a0C" firstAttribute="centerX" secondItem="3kk-4V-mZD" secondAttribute="centerX" id="Krs-0x-0EX"/>
+                                    <constraint firstItem="dQi-g6-548" firstAttribute="centerX" secondItem="JUw-VT-a0C" secondAttribute="centerX" id="MB5-XM-cdX"/>
+                                    <constraint firstItem="JUw-VT-a0C" firstAttribute="top" secondItem="3kk-4V-mZD" secondAttribute="top" id="Ujv-YC-e4y"/>
+                                    <constraint firstItem="JUw-VT-a0C" firstAttribute="height" secondItem="3kk-4V-mZD" secondAttribute="height" multiplier="0.25" id="dx3-qB-T2p"/>
+                                    <constraint firstItem="dQi-g6-548" firstAttribute="top" secondItem="JUw-VT-a0C" secondAttribute="bottom" id="i12-0n-gl0"/>
+                                </constraints>
+                            </stackView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v3o-Vb-mVK">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="cxi-tt-9e0"/>
+                                </constraints>
                                 <items>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="EtM-zB-5T0"/>
                                     <barButtonItem title="New Collection" id="gfO-fX-oed">
@@ -125,17 +137,13 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="dQi-g6-548" firstAttribute="width" secondItem="J9Y-X6-POJ" secondAttribute="width" id="B7I-kg-bMU"/>
-                            <constraint firstItem="v3o-Vb-mVK" firstAttribute="top" secondItem="dQi-g6-548" secondAttribute="bottom" id="Erv-hi-6uL"/>
-                            <constraint firstItem="v3o-Vb-mVK" firstAttribute="centerX" secondItem="J9Y-X6-POJ" secondAttribute="centerX" id="Hgb-fV-wU5"/>
-                            <constraint firstItem="JUw-VT-a0C" firstAttribute="width" secondItem="J9Y-X6-POJ" secondAttribute="width" id="Mah-RT-510"/>
-                            <constraint firstItem="dQi-g6-548" firstAttribute="centerX" secondItem="v3o-Vb-mVK" secondAttribute="centerX" id="MxN-gG-J9U"/>
-                            <constraint firstItem="dQi-g6-548" firstAttribute="top" secondItem="JUw-VT-a0C" secondAttribute="bottom" constant="8" id="TlD-An-HKg"/>
-                            <constraint firstItem="dQi-g6-548" firstAttribute="top" secondItem="JUw-VT-a0C" secondAttribute="bottom" constant="8" id="geN-CO-VBe"/>
-                            <constraint firstItem="JUw-VT-a0C" firstAttribute="top" secondItem="Arm-bE-XIM" secondAttribute="bottom" id="ihr-Wy-fZZ"/>
-                            <constraint firstItem="89X-AR-N0f" firstAttribute="top" secondItem="v3o-Vb-mVK" secondAttribute="bottom" id="kGB-4B-hxK"/>
-                            <constraint firstItem="v3o-Vb-mVK" firstAttribute="width" secondItem="J9Y-X6-POJ" secondAttribute="width" id="piY-Jr-gpj"/>
-                            <constraint firstItem="JUw-VT-a0C" firstAttribute="centerX" secondItem="J9Y-X6-POJ" secondAttribute="centerX" id="sNx-eK-Vzn"/>
+                            <constraint firstItem="3kk-4V-mZD" firstAttribute="width" secondItem="J9Y-X6-POJ" secondAttribute="width" id="4T9-uC-VTr"/>
+                            <constraint firstItem="89X-AR-N0f" firstAttribute="top" secondItem="v3o-Vb-mVK" secondAttribute="bottom" id="Cxp-RV-Ldd"/>
+                            <constraint firstItem="v3o-Vb-mVK" firstAttribute="width" secondItem="J9Y-X6-POJ" secondAttribute="width" id="G5D-NS-OqQ"/>
+                            <constraint firstItem="3kk-4V-mZD" firstAttribute="centerX" secondItem="J9Y-X6-POJ" secondAttribute="centerX" id="HAy-gh-ACj"/>
+                            <constraint firstItem="3kk-4V-mZD" firstAttribute="height" secondItem="J9Y-X6-POJ" secondAttribute="height" id="Inf-Pb-46S"/>
+                            <constraint firstItem="v3o-Vb-mVK" firstAttribute="centerX" secondItem="J9Y-X6-POJ" secondAttribute="centerX" id="RsZ-hV-Wmi"/>
+                            <constraint firstItem="3kk-4V-mZD" firstAttribute="top" secondItem="Arm-bE-XIM" secondAttribute="bottom" id="UOW-mH-9i8"/>
                         </constraints>
                     </view>
                     <connections>
